SERVER-37182 Correctly handle duplicate fields in $arrayToObject